infra/k8s/nginx/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/meilisearch)(.*) /$2 break;
spec:
  rules:
    - host: dine-ease.dev
      http:
        paths:
          - path: /meilisearch(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: meilisearch-srv
                port:
                  number: 7700
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/login/?(.*)
            pathType: Prefix
            backend:
              service:
                name: login-gateway-srv
                port:
                  number: 3000
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-srv
                port:
                  number: 3000
          - path: /api/mail/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mail-srv
                port:
                  number: 3000
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notifications-srv
                port:
                  number: 3000
          - path: /socket.io/notifications
            pathType: Prefix
            backend:
              service:
                name: notifications-srv
                port:
                  number: 3000
          - path: /api/dining-plan/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dining-plans-srv
                port:
                  number: 3000
          - path: /api/map/?(.*)
            pathType: Prefix
            backend:
              service:
                name: map-srv
                port:
                  number: 3000
          - path: /api/plan/?(.*)
            pathType: Prefix
            backend:
              service:
                name: subscriptions-srv
                port:
                  number: 3000
          - path: /api/subscription/?(.*)
            pathType: Prefix
            backend:
              service:
                name: subscriptions-srv
                port:
                  number: 3000
          - path: /api/review/?(.*)
            pathType: Prefix
            backend:
              service:
                name: reviews-srv
                port:
                  number: 3000
          - path: /api/restaurant/?(.*)
            pathType: Prefix
            backend:
              service:
                name: restaurants-srv
                port:
                  number: 3000
          - path: /admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-srv
                port:
                  number: 8080
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
